2003-08-16  Jon Schewe  <jpschewe@mtu.net>

	* Multiple files: Added display page the is used for the display
	computer.  This page opens up a new window in fullscreen mode
	(Mozilla users may need to press F11) and then displays the
	welcome page, the scoreboard or the remotely controlled brackets.
	This page is controlled via a remote control page accessible from
	the admin page.  Also the scoreboard pages now automatically
	detect the screen size and redirect the web browser to the
	appropriate page. (707891, 707856).
	
	* web/WEB-INF/jspf/initializeApplicationVars.jspf: Added cache
	control headers.  This should keep all pages from being cached in
	browser and proxy caches.  (707883)

2003-08-14  Jon Schewe  <jpschewe@mtu.net>

	* web/welcome.jsp: Welcome page for Minnesota tournaments.
	(707859)

2003-08-11  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/model/SubjectiveTableModel.java (SubjectiveTableModel):
	Changed default sort to be by team number (707851)

2003-08-10  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/report/FinalComputedScores.java (generateReport):
	Put "No Score" in bold red on final score report for missing
	scores.  (707890)

	* docs/README.developer (MISC): Removed the application variable
	currentTournament, just use Queries.getCurrentTournament() all of
	the time now.

	* web/admin/index.jsp: Make sure we don't grab the current
	tournament until after it's actually been changed, otherwise the
	combobox reports the previous tournament after changes.

	* src/fll/web/GetFile.java (getFile): Ensure that
	judges are assigned before downloading subjective datafile (707847).

	* src/fll/Queries.java (isJudgesProperlyAssigned): Ensure that
	judges are assigned before downloading subjective datafile (707847).

2003-08-09  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/model/SubjectiveTableModel.java (sort): Use
	fireTableDataChanged to signify that a sort has occurred instead
	of fireTableStructureChanged.  This keeps the table columns from